@@ -6,6 +6,7 @@
     "ENFORCE_BASEPATH": false,
     "SSL_CERTIFICATE": null,
     "SSL_KEY": null,
+    "IGNORE_SSL": false,
     "HASS_API": "http://127.0.0.1:8123/api/",
     "HASS_API_PASSWORD": null,
     "USERNAME": null,
